2001-05-01  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java: New file.
	* gnu/testlet/java/text/SimpleDateFormat/Test.java (test): Removed
	libgcj regression test.

2001-04-26  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/DateFormatSymbols/Test.java (test):
	Removed println.

2001-04-25  Jeff Sturm  <jsturm@one-point.com>

	* gnu/testlet/java/util/Calendar/simple.java: New file.

2001-04-25  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/getAndSet2DigitYearStart.java
	(Test): Removed `get' test.
	
2001-04-24  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/Test.java (test): Added
	parsing regression test.

2001-04-02  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/PrintStream/subclass.java: New file.

2001-03-23  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Class/ClassTest.java (test_forName): Added
	test for `[int'.

2001-02-19  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/ThreadGroup/enumerate.java: New file.

2001-02-13  Warren Levy  <warrenl@redhat.com>

	* README: Included paragraph on ignoring expected failures with xfails.

2001-02-08  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/InputStreamReader/except.java: New file.

2001-02-08  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/SimpleTestHarness.java (SimpleTestHarness): Moved
	code for reading xfails file from main.

2001-02-08  Warren Levy  <warrenl@redhat.com>

	* gnu/testlet/SimpleTestHarness.java: Minor formatting fixes.
	(check): Compare failures against expected failures.
	(done): Print out totals for unexpected failures and passes.
	(main): Load expected failures file into Vector.

2001-02-07  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/MessageFormat/format.java (test): Added
	test for JDK compatibility.

	* gnu/testlet/java/util/Arrays/sort.java: New file.

2001-01-16  Warren Levy  <warrenl@redhat.com>
