@@ -1,3 +1,7 @@
+2001-05-08  Tom Tromey  <tromey@redhat.com>
+
+	* gnu/testlet/java/util/Calendar/simple.java: Remove bogus test.
+
 2001-05-01  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/testlet/java/text/SimpleDateFormat/regress.java: New file.
